# git-deploy

./: .gitignore  Changelog.md  README.legacy.md  README.md  build-wrapper-virtualenv.sh  config-vars.md  git-deploy.py  git-deploy.wrapper.sh  mypy.ini  pyproject.toml  setup.py
ansible/: build.containers.yml  deploy.python.yml  deploy.repository.yml  deploy.static.yml  deploy.web.1.05.yml  deploy.web.yml  local.repository.yml
ansible/templates/: env.j2  env_run.j2  nginx.j2  systemd.j2  upstart.j2
etc/ansible/roles/docker-compose/: README.md
etc/ansible/roles/dotenv/: README.md
etc/ansible/roles/nginx/: README.md
etc/ansible/roles/repo/: README.md
etc/ansible/roles/s3/: README.md
etc/ansible/roles/service/: README.md
etc/ansible/roles/virtualenv/: README.md
examples/: config.common.yml.example  config.prd.yml.example  config.stg.yml.example
examples/flaskproject/deploy/: config.common.yml  config.stg.yml  playbook.deploy.yml
git_deploy/: __init__.py  ansible.py  cli.py  config.py  deploy.py  enums.py  playbook.py  secrets.py  sh.py  typercli.py
git_deploy/ansible/: build.containers.yml  deploy.repository.yml  deploy.static.yml  deploy.web.1.05.yml
git_deploy/ansible/templates/: dotenv.j2  project.j2  systemd.j2
git_deploy/playbooks/: build.containers.yml  deploy.python.yml  deploy.repository.yml  deploy.static.yml  deploy.web.yml  local.repository.yml
git_deploy/playbooks/templates/: env.j2  nginx.j2
gitdeploy/: ansible.py  config.py  enums.py  repo.py
gitdeploy/cli/: __init__.py  deploy.py  secrets.py
tests/: test_git_deploy.py
(+21 files in other folders)
