[tool.poetry]
name = "git-deploy"
version = "0.1.0"
description = ""
authors = ["Scott Bradley <scottbradley.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
git-deploy = 'git_deploy.cli:main'
